# DupFile-Analyzer

./: Cargo.toml  LICENSE  README  README.md
src/: app.rs  config.rs  dedupe.rs  error.rs  export.rs  lib.rs  main.rs  report.rs  scanner.rs  utils.rs
src/hashing/: content.rs  mod.rs  perceptual.rs
tests/: scan.rs
